# nightside

./: .gitignore  CMakeLists.txt  README.md
cmake/func/: AddTargetSource.cmake
dependencies/: CMakeLists.txt
game/: CMakeLists.txt
game/include/nightside/: Application.hpp  CMakeLists.txt
game/include/nightside/core/: CMakeLists.txt  Finder.hpp
game/include/nightside/shader/: CMakeLists.txt  LightShader.hpp  Palette.hpp  Shader.hpp
game/src/: Application.cpp  CMakeLists.txt
game/src/core/: CMakeLists.txt  Finder.cpp
game/src/shader/: CMakeLists.txt  LightShader.cpp  Palette.cpp  Shader.cpp
launcher/: CMakeLists.txt
launcher/src/: CMakeLists.txt  main.cpp
resources/palettes/: gameboy.json  pioneer.json
resources/shaders/: light_combined.frag  lighten.frag  lighten.vert  point_light.frag
